--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "agroforest-mapeo-config-generator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prepare": "node bin/prepareFiles.js",
+    "icons": "node bin/updateIcons.js",
     "build": "mkdirp build && mapeo-settings build -l 'pt' -o build/${npm_package_name}-v${npm_package_version}.mapeosettings",
     "extract-messages": "mkdirp messages && mapeo-settings extract-messages -o messages/en.json",
     "prepublishOnly": "rimraf dist && mkdirp dist && npm run -s build && tar -C dist -xf build/${npm_package_name}-v${npm_package_version}.mapeosettings",
